todo align fix

--- a/src/blocks/project/project.css
+++ b/src/blocks/project/project.css
@@ -46,8 +46,12 @@
 .project_name_todo-list {
     background-position: 0 0;
     grid-area: todo;
-    align-self: end;
     background-image: url('../../images/todo-list.jpg');
+}
+@media all and (max-width: 1120px) {
+    .project_name_todo-list {
+        align-self: end;
+    }
 }
 
 .project_name_animation {
